--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
         margin: 1rem auto;
         font-size: 1.2rem;
         color: #b2fef5;
+        margin-top: -5%;
       }
 
       .logo {
@@ -167,12 +168,13 @@
         border-radius: 50%;
         border-style: solid;
         border-width: 4px;
+        margin-top: -14%;
       }
 
       .btn {
         padding: 10px 15px;
         font-size: 14px;
-        margin-top: 15px;
+        margin-top: -15px;
         background: #00ffe0;
         color: #000;
         border: none;
@@ -200,7 +202,7 @@
       }
 
       .input-button-group {
-        margin-top: 14%;
+        margin-top: 5%;
         margin-right: auto;
         margin-left: auto;
         width: 350px;
@@ -259,16 +261,19 @@
     <h1>REBA</h1>
     <p>A frog that escaped Ethereum rebasing hell and found peace on BASE. Rewarding every holder with Based Pepe. With
       continuous 2% Based Pepe Rewards ...</p>
-    <button class="btn">Base Scan</button>
-    <button class="btn">Charts</button>
-    <button class="btn">Telegram</button>
-    <button class="btn">X</button>
+    <button onclick="window.open('https://basescan.org/', '_blank')" class="btn">Base Scan</button>
+    <button onclick="window.open('https://dexscreener.com', '_blank')" class="btn">Charts</button>
+    <button onclick="window.open('https://t.me/Rebased_base', '_blank')" class="btn">Telegram</button>
+    <button onclick="window.open('https://x.com/rebased_base', '_blank')" class="btn">X</button>
     <div class="input-button-group">
       <input type="text" placeholder="Enter Wallet Address. Soon ... ">
       <button disabled>Check Rewards</button>
     </div>
     <div class="slide-container">
       <div class="slide-text">
+        2% TAX as BASED Pepe Rewards -
+        2% TAX as BASED Pepe Rewards -
+        2% TAX as BASED Pepe Rewards -
         2% TAX as BASED Pepe Rewards -
         2% TAX as BASED Pepe Rewards -
         2% TAX as BASED Pepe Rewards -
