--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@
     <h1>REBA</h1>
     <p>A frog that escaped Ethereum rebasing hell and found peace on BASE. Rewarding every holder with Based Pepe. With
       continuous 2% Based Pepe Rewards ...</p>
-    <button onclick="window.open('https://basescan.org/', '_blank')" class="btn">Base Scan</button>
-    <button onclick="window.open('https://dexscreener.com', '_blank')" class="btn">Charts</button>
+    <button onclick="window.open('https://basescan.org/token/0x51b30670b4c77fdcdd083882d1708dfaab5397ad', '_blank')" class="btn">Base Scan</button>
+    <button onclick="window.open('https://dexscreener.com/base/0x51B30670B4C77fDCDd083882D1708dFaAb5397AD', '_blank')" class="btn">Charts</button>
     <button onclick="window.open('https://t.me/Rebased_base', '_blank')" class="btn">Telegram</button>
     <button onclick="window.open('https://x.com/rebased_base', '_blank')" class="btn">X</button>
     <div class="input-button-group">
